feat: implement Re-evaluation feature overhaul